[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/spikes/spikes.png" type="Texture" id=1]
[ext_resource path="res://spike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 34 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 34 )

[node name="spike" type="Node2D"]
script = ExtResource( 2 )

[node name="rigid_body_2d" type="RigidBody2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 2
mode = 1
contacts_reported = 5
contact_monitor = true
can_sleep = false

[node name="collision_polygon_2d" type="CollisionPolygon2D" parent="rigid_body_2d"]
polygon = PoolVector2Array( -7, -4, -5, 2, 0, 8, 1, 8, 5, 4, 5, 0 )

[node name="sprite" type="Sprite" parent="rigid_body_2d"]
texture = ExtResource( 1 )

[node name="player_detection" type="Area2D" parent="."]
position = Vector2( 0, 8 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_detection"]
position = Vector2( -32, 28 )
shape = SubResource( 1 )

[node name="collision_shape_2d2" type="CollisionShape2D" parent="player_detection"]
position = Vector2( 32, 28 )
shape = SubResource( 2 )
[connection signal="body_entered" from="rigid_body_2d" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
